--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "geocoder": "^0.2.3",
     "met": "0.0.3",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.5",
+    "nodemailer": "^4.4.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
