--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "geocoder": "^0.2.3",
+    "json2xls": "^0.1.2",
     "met": "0.0.3",
     "method-override": "^2.3.10",
     "moment": "^2.19.2",
