--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.4.0"
+    "passport-local-mongoose": "^4.4.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
